# lab9

./: README.md  pyproject.toml  setup.cfg
prog/: ind.py
